Fix number going out of bounds

--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@ output.user-input {
 output.result {
   font-size: 1.6rem;
 }
+#screen.shrink output {
+  font-size: 1rem;
+}
 #allButtons {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
